# fastapi-with-mee

01crud with mongodb/: README.md  main.py  pyproject.toml
01crud with mongodb/config/: database.py
01crud with mongodb/models/: todo.py
01crud with mongodb/routes/: routes.py
01crud with mongodb/schema/: schema.py
Fast API/00hello_fastapi/: main.py  practice.py  pyproject.toml
Fast API/01pydantic/: main.py  pyproject.toml
